--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
         "start": "node app.js",
         "dev": "nodemon --exec node app.js"
     },
-    "author": "Modificações por Rafael Scheneider",
+    "author": "Modificações por Eye On Server",
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
