--- a/site/package.json
+++ b/site/package.json
@@ -4,16 +4,17 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js",
+        "start": "nodemon app.js",
         "dev": "nodemon --exec node app.js"
     },
     "author": "Modificações por Eye On Server",
     "dependencies": {
         "config": "^3.3.9",
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.17.1",
         "mysql2": "^2.3.3",
-        "nodemon": "^2.0.7",
+        "nodemon": "^2.0.22",
         "path": "^0.12.7",
         "serialport": "^10.4.0"
     }
