--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.17.1",
         "mysql2": "^2.3.3",
+        "nodemailer": "^6.9.7",
         "nodemon": "^2.0.22",
         "path": "^0.12.7",
         "serialport": "^10.4.0"
