Dashboard de previsão iniciada, Tabela Ok e Grafico em progresso

--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     },
     "author": "Modificações por Eye On Server",
     "dependencies": {
+        "chartjs-plugin-annotation": "^3.0.1",
         "config": "^3.3.9",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
