--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mathjs": "^12.1.0",
         "mysql2": "^2.3.3",
         "nodemailer": "^6.9.7",
         "nodemon": "^2.0.22",
