--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mathjs": "^12.1.0",
+        "mssql": "^10.0.1",
         "mysql2": "^2.3.3",
         "nodemailer": "^6.9.7",
         "nodemon": "^2.0.22",
